@@ -8,6 +8,7 @@
 
 \alias{attachNamespace}
 \alias{loadNamespace}
+\alias{requireNamespace}
 \alias{loadedNamespaces}
 \alias{unloadNamespace}
 
@@ -19,6 +20,7 @@ attachNamespace(ns, pos = 2, dataPath = NULL, depends = NULL)
 loadNamespace(package, lib.loc = NULL,
               keep.source = getOption("keep.source.pkgs"),
               partial = FALSE)
+requireNamespace(package, ..., quietly = FALSE)
 loadedNamespaces()
 unloadNamespace(ns)
 }
@@ -39,6 +41,8 @@ unloadNamespace(ns)
     For more details see this argument to \code{\link{library}}.
   }
   \item{partial}{logical; if true, stop just after loading code.}
+  \item{quietly}{logical: should progress and error messages be suppressed?}
+  \item{\dots}{further arguments to be passed to \code{loadNamespace}.}
 }
 \details{
   The functions \code{loadNamespace} and \code{attachNamespace} are
@@ -46,17 +50,16 @@ unloadNamespace(ns)
   space and any imports needed.  However it may be useful to call
   these functions directly at times.
 
-  \code{loadNamespace} loads the specified namespace and registers it
-  in an internal data base.  A request to load a namespace when one of
-  that name is already loaded has no effect.  The arguments have the
-  same meaning as the corresponding arguments to \code{\link{library}},
-  whose help page explains the details of how a particular installed
-  package comes to be chosen.  After loading, \code{loadNamespace} looks
-  for a hook function named \code{\link{.onLoad}} as an internal
-  variable in the namespace (it should not be exported).  This function
-  is called with the same arguments as \code{.First.lib}.  Partial
-  loading is used to support installation with the \option{--save} and
-  \option{--lazy} options.
+  \code{loadNamespace} loads the specified namespace and registers it in
+  an internal data base.  A request to load a namespace when one of that
+  name is already loaded has no effect.  The arguments have the same
+  meaning as the corresponding arguments to \code{\link{library}}, whose
+  help page explains the details of how a particular installed package
+  comes to be chosen.  After loading, \code{loadNamespace} looks for a
+  hook function named \code{\link{.onLoad}} as an internal variable in
+  the namespace (it should not be exported).  This function is called
+  with the same arguments as \code{.First.lib}.  Partial loading is used
+  to support installation with the \option{--lazy} option.
 
   \code{loadNamespace} does not attach the namespace it loads to the
   search path.  \code{attachNamespace} can be used to attach a frame
@@ -64,6 +67,9 @@ unloadNamespace(ns)
   this is almost always done \emph{via} \code{\link{library}}).  The
   hook function \code{\link{.onAttach}} is run after the namespace
   exports are attached.
+
+  \code{requireNamespace} is a wrapper for \code{loadNamespace}
+  analogous to \code{\link{require}} that returns a logical value.
 
   \code{loadedNamespaces} returns a character vector of the names of
   the loaded namespaces.
@@ -80,16 +86,19 @@ unloadNamespace(ns)
   issues with unloading and reloading namespaces.
 }
 \value{
-  \code{attachNamespace} returns invisibly the environment it adds to
-  the search path.
+  \code{attachNamespace} returns invisibly the package environment it
+  adds to the search path.
   
   \code{loadNamespace} returns the namespace environment, either one
   already loaded or the one the function causes to be loaded.
-
+  
+  \code{requireNamespace} returns \code{TRUE} if it succeeds or
+  \code{FALSE}.
+  
   \code{loadedNamespaces} returns a character vector.
 
   \code{unloadNamespace} returns \code{NULL}, invisibly.
 }
 \keyword{data}
 \keyword{utilities}
-\author{Luke Tierney}
+\author{Luke Tierney and R-core}
