@@ -292,8 +292,13 @@
       \item The body of a closure can be one of more types of \R
       objects, including enviroments and external pointers.
       
-      \item The \code{Rd2HTML()} function now has a \code{stylesheet}
-      argument, allowing pages to be displayed in alternate formats.
+      \item The \code{Rd2HTML()} function in package \pkg{tools} now has
+      a \code{stylesheet} argument, allowing pages to be displayed in
+      alternate formats.
+      
+      \item New function \code{requireNamespace()} analogous to
+      \code{require()}, returning a logical value after attempting to
+      load a namespace.
     }
   }
 
